# markdown2word-mcp

./: 2024年度技术报告.docx  2024年度技术报告_v2.docx  CLAUDE.md  FORMAT_MODIFICATION_FLOW.md  FORMAT_MODIFICATION_V2.md  MCP_DEPLOYMENT_GUIDE.md  MCP_FINAL_SETUP.md  MCP_PUBLIC_MAPPING_EXPERIENCE.md  MCP_USAGE_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  README.docx  README.md  TEST_HEADING_NUMBERING.md  convert_test.py  demo_report.md  demo_report_3.md  plan.plan.md  pom.xml  save_word_from_base64.py  simple_test.md  test-mcp-protocol.py  test-mcp.sh  test-report.md  test_mcp.py  test_network_image.md  test_network_image_optimized.docx  test_network_image_output.docx  test_with_3charts.md  test_with_chart.md  技术发展报告.docx  标题编号修复流程图.md  标题编号逻辑说明.md  测试文档_三图表.docx  测试文档_三图表_修复版.docx  测试文档_单图表.docx  简单测试.docx  项目进度报告.docx
.claude/: settings.local.json
markdown/: 未命名.md
md2doc-service-python/: CLAUDE.md  FLOWCHARTS.md  PROJECT_SUMMARY.md  demo_report_output.docx  example.md  pyproject.toml  render.html  test_image_chart.md  test_image_chart_output.docx  test_setup.py
md2doc-service-python/src/md2doc_mcp/: __init__.py  server.py
md2doc-service-python/src/md2doc_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
md2doc-service-python/src/md2doc_mcp/core/: __init__.py  converter.py  echarts_converter.py  echarts_renderer.py  template_creator.py  word_generator.py
md2doc-service-python/src/md2doc_mcp/models/: chart_column.py  chart_table.py  word_params.py
md2doc-service-python/用所选项目新建的文件夹/: final_echarts_output.docx  test_echarts_fixed.docx  test_echarts_output.docx
(+55 files in other folders)
